# lsdir

./: Makefile  README.md  pyproject.toml
Formula/: lsdir.rb
lsdir/: core.py
src/lsdir/: __init__.py  __main__.py  lsdir.py
src/lsdir.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
